--- a/style.css
+++ b/style.css
@@ -62,6 +62,11 @@ color: var(--link_color);
 text-decoration: none;
 }
 
+.overview-link {
+  color: var(--link_color);
+  text-decoration: none;
+}
+
 /* .cv .thesis-link:link {
 color:red;
 text-decoration: none;
