adding a total list of works with corresponding links to the static CV, and a folder of previously submitted cover letters

--- a/style.css
+++ b/style.css
@@ -152,3 +152,16 @@ z-index: 1;
   padding-bottom: 1%;
   color: white;
 }
+
+/* footer */
+.footer {
+  background: var(--background);
+  padding-bottom: 2.5%;
+  text-align: center;
+}
+
+.footer .container a {
+  padding-top: 3%;
+  padding-bottom: 1%;
+  color: var(--link_color);
+}
